# Resicleje_inteligente

./: .gitignore  README.md  control_cambio.text  db.sqlite3  json.json  pyproject.toml  render.yaml
Api_Reciclaje_I/: models.py  serializers.py  urls.py  views.py
Api_Reciclaje_I/migrations/: 0001_initial.py  0002_alter_category_update_at.py  0003_alter_category_update_at.py  0004_alter_category_update_at.py  0005_alter_category_update_at.py  0006_alter_category_update_at.py  0007_alter_category_update_at.py  0008_alter_category_update_at.py  0009_alter_category_update_at.py  0010_alter_category_update_at.py  0011_alter_category_update_at.py  0012_alter_category_img_alter_category_update_at.py  0013_delete_category.py  0014_initial.py  0015_alter_category_updated_at.py  0016_alter_category_updated_at.py  0017_alter_category_updated_at.py  0018_alter_category_updated_at.py  0019_alter_category_updated_at.py  0020_alter_category_updated_at.py  0021_alter_category_updated_at.py  0022_alter_category_updated_at.py  0023_alter_category_updated_at.py  0024_alter_category_updated_at.py
Frontend_resiclaje/: apps.py  urls.py  views.py
Frontend_resiclaje/Templates/: Index.html
Frontend_resiclaje/templates/: Acerca.html  HomeIndex.html  Index.html  Metales.html  Papel.html  Plastico.html  Vidrio.html  base.html
User_admin/: admin.py  models.py  permissions.py  rutas.py  serializers.py  tokenpermisos.py  urls.py  views.py
User_admin/migrations/: 0001_initial.py  (+23 more)
logs/: admin.py  models.py
primerProducto01/: settings.py  urls.py
staticfiles/: staticfiles.json
(+13 files in other folders)
